--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -39,10 +39,10 @@ cmake_force:
 SHELL = /bin/sh
 
 # The CMake executable.
-CMAKE_COMMAND = /usr/local/Cellar/cmake/3.7.2/bin/cmake
+CMAKE_COMMAND = "/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake"
 
 # The command to remove a file.
-RM = /usr/local/Cellar/cmake/3.7.2/bin/cmake -E remove -f
+RM = "/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -E remove -f
 
 # Escaping for special characters.
 EQUALS = =
@@ -59,7 +59,7 @@ CMAKE_BINARY_DIR = /Users/leon/git/leetcode/cpp
 # Special rule for the target install/local
 install/local: preinstall
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Installing only the local directory..."
-	/usr/local/Cellar/cmake/3.7.2/bin/cmake -DCMAKE_INSTALL_LOCAL_ONLY=1 -P cmake_install.cmake
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -DCMAKE_INSTALL_LOCAL_ONLY=1 -P cmake_install.cmake
 .PHONY : install/local
 
 # Special rule for the target install/local
@@ -70,7 +70,7 @@ install/local/fast: install/local
 # Special rule for the target install/strip
 install/strip: preinstall
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Installing the project stripped..."
-	/usr/local/Cellar/cmake/3.7.2/bin/cmake -DCMAKE_INSTALL_DO_STRIP=1 -P cmake_install.cmake
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -DCMAKE_INSTALL_DO_STRIP=1 -P cmake_install.cmake
 .PHONY : install/strip
 
 # Special rule for the target install/strip
@@ -81,13 +81,13 @@ install/strip/fast: install/strip
 # Special rule for the target install
 install: preinstall
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Install the project..."
-	/usr/local/Cellar/cmake/3.7.2/bin/cmake -P cmake_install.cmake
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -P cmake_install.cmake
 .PHONY : install
 
 # Special rule for the target install
 install/fast: preinstall/fast
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Install the project..."
-	/usr/local/Cellar/cmake/3.7.2/bin/cmake -P cmake_install.cmake
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -P cmake_install.cmake
 .PHONY : install/fast
 
 # Special rule for the target list_install_components
@@ -103,7 +103,7 @@ list_install_components/fast: list_install_components
 # Special rule for the target rebuild_cache
 rebuild_cache:
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake to regenerate build system..."
-	/usr/local/Cellar/cmake/3.7.2/bin/cmake -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
 .PHONY : rebuild_cache
 
 # Special rule for the target rebuild_cache
@@ -113,8 +113,8 @@ rebuild_cache/fast: rebuild_cache
 
 # Special rule for the target edit_cache
 edit_cache:
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake cache editor..."
-	/usr/local/Cellar/cmake/3.7.2/bin/ccmake -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "No interactive CMake dialog available..."
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -E echo No\ interactive\ CMake\ dialog\ available.
 .PHONY : edit_cache
 
 # Special rule for the target edit_cache
@@ -219,60 +219,6 @@ runLeetCodeTests/fast:
 	$(MAKE) -f leetcode_tests/tests/CMakeFiles/runLeetCodeTests.dir/build.make leetcode_tests/tests/CMakeFiles/runLeetCodeTests.dir/build
 .PHONY : runLeetCodeTests/fast
 
-leetcode_tests/tests/P1.o: leetcode_tests/tests/P1.cpp.o
-
-.PHONY : leetcode_tests/tests/P1.o
-
-# target to build an object file
-leetcode_tests/tests/P1.cpp.o:
-	$(MAKE) -f CMakeFiles/leetcode_run.dir/build.make CMakeFiles/leetcode_run.dir/leetcode_tests/tests/P1.cpp.o
-.PHONY : leetcode_tests/tests/P1.cpp.o
-
-leetcode_tests/tests/P1.i: leetcode_tests/tests/P1.cpp.i
-
-.PHONY : leetcode_tests/tests/P1.i
-
-# target to preprocess a source file
-leetcode_tests/tests/P1.cpp.i:
-	$(MAKE) -f CMakeFiles/leetcode_run.dir/build.make CMakeFiles/leetcode_run.dir/leetcode_tests/tests/P1.cpp.i
-.PHONY : leetcode_tests/tests/P1.cpp.i
-
-leetcode_tests/tests/P1.s: leetcode_tests/tests/P1.cpp.s
-
-.PHONY : leetcode_tests/tests/P1.s
-
-# target to generate assembly for a file
-leetcode_tests/tests/P1.cpp.s:
-	$(MAKE) -f CMakeFiles/leetcode_run.dir/build.make CMakeFiles/leetcode_run.dir/leetcode_tests/tests/P1.cpp.s
-.PHONY : leetcode_tests/tests/P1.cpp.s
-
-main.o: main.cpp.o
-
-.PHONY : main.o
-
-# target to build an object file
-main.cpp.o:
-	$(MAKE) -f CMakeFiles/leetcode_run.dir/build.make CMakeFiles/leetcode_run.dir/main.cpp.o
-.PHONY : main.cpp.o
-
-main.i: main.cpp.i
-
-.PHONY : main.i
-
-# target to preprocess a source file
-main.cpp.i:
-	$(MAKE) -f CMakeFiles/leetcode_run.dir/build.make CMakeFiles/leetcode_run.dir/main.cpp.i
-.PHONY : main.cpp.i
-
-main.s: main.cpp.s
-
-.PHONY : main.s
-
-# target to generate assembly for a file
-main.cpp.s:
-	$(MAKE) -f CMakeFiles/leetcode_run.dir/build.make CMakeFiles/leetcode_run.dir/main.cpp.s
-.PHONY : main.cpp.s
-
 # Help Target
 help:
 	@echo "The following are some of the valid targets for this Makefile:"
@@ -290,12 +236,6 @@ help:
 	@echo "... gtest_main"
 	@echo "... gtest"
 	@echo "... runLeetCodeTests"
-	@echo "... leetcode_tests/tests/P1.o"
-	@echo "... leetcode_tests/tests/P1.i"
-	@echo "... leetcode_tests/tests/P1.s"
-	@echo "... main.o"
-	@echo "... main.i"
-	@echo "... main.s"
 .PHONY : help
 
 
