--- a/cpp/leetcode/Makefile
+++ b/cpp/leetcode/Makefile
@@ -39,10 +39,10 @@ cmake_force:
 SHELL = /bin/sh
 
 # The CMake executable.
-CMAKE_COMMAND = /usr/local/Cellar/cmake/3.7.2/bin/cmake
+CMAKE_COMMAND = "/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake"
 
 # The command to remove a file.
-RM = /usr/local/Cellar/cmake/3.7.2/bin/cmake -E remove -f
+RM = "/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -E remove -f
 
 # Escaping for special characters.
 EQUALS = =
@@ -59,7 +59,7 @@ CMAKE_BINARY_DIR = /Users/leon/git/leetcode/cpp
 # Special rule for the target install/local
 install/local: preinstall
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Installing only the local directory..."
-	/usr/local/Cellar/cmake/3.7.2/bin/cmake -DCMAKE_INSTALL_LOCAL_ONLY=1 -P cmake_install.cmake
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -DCMAKE_INSTALL_LOCAL_ONLY=1 -P cmake_install.cmake
 .PHONY : install/local
 
 # Special rule for the target install/local
@@ -70,7 +70,7 @@ install/local/fast: install/local
 # Special rule for the target install/strip
 install/strip: preinstall
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Installing the project stripped..."
-	/usr/local/Cellar/cmake/3.7.2/bin/cmake -DCMAKE_INSTALL_DO_STRIP=1 -P cmake_install.cmake
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -DCMAKE_INSTALL_DO_STRIP=1 -P cmake_install.cmake
 .PHONY : install/strip
 
 # Special rule for the target install/strip
@@ -81,13 +81,13 @@ install/strip/fast: install/strip
 # Special rule for the target install
 install: preinstall
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Install the project..."
-	/usr/local/Cellar/cmake/3.7.2/bin/cmake -P cmake_install.cmake
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -P cmake_install.cmake
 .PHONY : install
 
 # Special rule for the target install
 install/fast: preinstall/fast
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Install the project..."
-	/usr/local/Cellar/cmake/3.7.2/bin/cmake -P cmake_install.cmake
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -P cmake_install.cmake
 .PHONY : install/fast
 
 # Special rule for the target list_install_components
@@ -103,7 +103,7 @@ list_install_components/fast: list_install_components
 # Special rule for the target rebuild_cache
 rebuild_cache:
 	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake to regenerate build system..."
-	/usr/local/Cellar/cmake/3.7.2/bin/cmake -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
 .PHONY : rebuild_cache
 
 # Special rule for the target rebuild_cache
@@ -113,8 +113,8 @@ rebuild_cache/fast: rebuild_cache
 
 # Special rule for the target edit_cache
 edit_cache:
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake cache editor..."
-	/usr/local/Cellar/cmake/3.7.2/bin/ccmake -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "No interactive CMake dialog available..."
+	"/Users/leon/Library/Application Support/JetBrains/Toolbox/apps/CLion/ch-0/171.4073.41/CLion.app/Contents/bin/cmake/bin/cmake" -E echo No\ interactive\ CMake\ dialog\ available.
 .PHONY : edit_cache
 
 # Special rule for the target edit_cache
@@ -249,6 +249,33 @@ Solution22.s: Solution22.cpp.s
 Solution22.cpp.s:
 	cd /Users/leon/git/leetcode/cpp && $(MAKE) -f leetcode/CMakeFiles/leetcode.dir/build.make leetcode/CMakeFiles/leetcode.dir/Solution22.cpp.s
 .PHONY : Solution22.cpp.s
+
+Solution318.o: Solution318.cpp.o
+
+.PHONY : Solution318.o
+
+# target to build an object file
+Solution318.cpp.o:
+	cd /Users/leon/git/leetcode/cpp && $(MAKE) -f leetcode/CMakeFiles/leetcode.dir/build.make leetcode/CMakeFiles/leetcode.dir/Solution318.cpp.o
+.PHONY : Solution318.cpp.o
+
+Solution318.i: Solution318.cpp.i
+
+.PHONY : Solution318.i
+
+# target to preprocess a source file
+Solution318.cpp.i:
+	cd /Users/leon/git/leetcode/cpp && $(MAKE) -f leetcode/CMakeFiles/leetcode.dir/build.make leetcode/CMakeFiles/leetcode.dir/Solution318.cpp.i
+.PHONY : Solution318.cpp.i
+
+Solution318.s: Solution318.cpp.s
+
+.PHONY : Solution318.s
+
+# target to generate assembly for a file
+Solution318.cpp.s:
+	cd /Users/leon/git/leetcode/cpp && $(MAKE) -f leetcode/CMakeFiles/leetcode.dir/build.make leetcode/CMakeFiles/leetcode.dir/Solution318.cpp.s
+.PHONY : Solution318.cpp.s
 
 Solution461.o: Solution461.cpp.o
 
@@ -407,6 +434,9 @@ help:
 	@echo "... Solution22.o"
 	@echo "... Solution22.i"
 	@echo "... Solution22.s"
+	@echo "... Solution318.o"
+	@echo "... Solution318.i"
+	@echo "... Solution318.s"
 	@echo "... Solution461.o"
 	@echo "... Solution461.i"
 	@echo "... Solution461.s"
