--- a/cpp/leetcode/CMakeLists.txt
+++ b/cpp/leetcode/CMakeLists.txt
@@ -9,7 +9,8 @@ set(HEADER_FILES
         Solution461.hpp
         Solution508.hpp
         Solution516.hpp
-        Solution318.h)
+        Solution318.h
+        Solution561.h)
 
 set(SOURCE_FILES
         Solution1.cpp
@@ -20,6 +21,7 @@ set(SOURCE_FILES
         Solution461.cpp
         Solution508.cpp
         Solution516.cpp
-        Solution318.cpp)
+        Solution318.cpp
+        Solution561.cpp)
 
 add_library(leetcode STATIC ${SOURCE_FILES} ${HEADER_FILES})
